I-358 Minor changes